// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inverse and disabled are true 1`] = `
<div
  className="flex-100 "
>
  <GradientBorder
    className="layout-row layout-align-center-center flex-100"
    content={
      <button
        className="round_btn_inverse neutral small false"
        onClick={[Function]}
      >
        <div
          className="layout-fill layout-row layout-align-space-around-center"
        >
          <p
            className="content"
          >
            <span
              className="icon"
            >
              <img
                alt=""
                className="flex-none icon"
                src="ICON"
              />
            </span>
            TEXT
          </p>
        </div>
      </button>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex pointy"
  />
</div>
`;

exports[`inverse is true 1`] = `
<div
  className="flex-100 "
>
  <GradientBorder
    className="layout-row layout-align-center-center flex-100"
    content={
      <button
        className="round_btn_inverse neutral small clickable"
        onClick={[Function]}
      >
        <div
          className="layout-fill layout-row layout-align-space-around-center"
        >
          <p
            className="content"
          >
            <span
              className="icon"
            >
              <img
                alt=""
                className="flex-none icon"
                src="ICON"
              />
            </span>
            TEXT
          </p>
        </div>
      </button>
    }
    gradient={
      Object {
        "backgroundImage": "-webkit-linear-gradient(-90deg, #333, #fafafa)",
      }
    }
    wrapperClassName="flex pointy"
  />
</div>
`;

exports[`size is full 1`] = `
<div
  className="flex-100 "
>
  <button
    className="round_btn neutral full clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="layout-fill layout-row layout-align-space-around-center"
    >
      <p
        className="content"
      >
        <span
          className="icon"
        >
          <img
            alt=""
            className="flex-none icon"
            src="ICON"
          />
        </span>
        TEXT
      </p>
    </div>
  </button>
</div>
`;

exports[`size is large 1`] = `
<div
  className="flex-100 "
>
  <button
    className="round_btn neutral large clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="layout-fill layout-row layout-align-space-around-center"
    >
      <p
        className="content"
      >
        <span
          className="icon"
        >
          <img
            alt=""
            className="flex-none icon"
            src="ICON"
          />
        </span>
        TEXT
      </p>
    </div>
  </button>
</div>
`;

exports[`size is small 1`] = `
<div
  className="flex-100 "
>
  <button
    className="round_btn neutral small clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="layout-fill layout-row layout-align-space-around-center"
    >
      <p
        className="content"
      >
        <span
          className="icon"
        >
          <img
            alt=""
            className="flex-none icon"
            src="ICON"
          />
        </span>
        TEXT
      </p>
    </div>
  </button>
</div>
`;
